--- a/epiqbooks-frontend/src/App.css
+++ b/epiqbooks-frontend/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+body {
+    background-color: #0e76a8
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+:root {
+    --mainOpacity: rgba(0, 0, 0, 0.55);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../public/Images/PublicImages/image-2.jpg");
+    opacity: var(--mainOpacity);
+    height: 25em !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.dark-overlay {
+    background-color: rgba(0, 0, 0, 0.35);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.main-color {
+    background-color: #0e76a8;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.col-image-left {
+    /* add image-4*/
+
+    background-image: url("../public/Images/PublicImages/laptop.jpeg");
+    background-size: cover;
+    height: 25em !important;
+}
+
+.col-image-right {
+    background-image: url("../public/Images/PublicImages/book.jpeg");
+    background-size: cover;
+    height: 25em !important;
+}
+
+.lost-image {
+    background-image: url("../public/Images/PublicImages/image-3.jpg");
+    height: 25em !important;
+    width: "720"
+}
+
+.homepage-carousel-title {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.book-div {
+    width: 480px;
+    height: 384px;
+}
+
+.inactiveLink {
+    pointer-events: none;
+    cursor: default;
+}
+
+#searchBookCard {
+    background: dodgerblue;
+
+}
+
+.searchBooksMain {
+    background: #0e76a8;
 }
