--- a/epiqbooks-frontend/src/App.css
+++ b/epiqbooks-frontend/src/App.css
@@ -2,11 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 body {
-  background-color: #cbcde4;
-}
-
-h5 {
-  font-size: 1.5rem;
+  background-color: #1c1f22;
 }
 
 :root {
