--- a/epiqbooks-frontend/src/App.css
+++ b/epiqbooks-frontend/src/App.css
@@ -80,3 +80,15 @@ body {
 #submit-question:hover {
   background: rgb(2 132 199);
 }
+
+.glass {
+  background: hsla(0, 0%, 100%, 0.4);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid hsla(0, 0%, 100%, 0.2);
+}
+
+.glass:hover {
+  background: hsla(0, 0%, 100%, 0.7);
+  border: 1px solid #fff;
+}
