--- a/epiqbooks-frontend/src/App.css
+++ b/epiqbooks-frontend/src/App.css
@@ -85,10 +85,18 @@ body {
   background: hsla(0, 0%, 100%, 0.4);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  border: 1px solid hsla(0, 0%, 100%, 0.2);
+  border: 1px solid hsla(228, 22%, 87%, 0.2);
 }
 
 .glass:hover {
   background: hsla(0, 0%, 100%, 0.7);
   border: 1px solid #fff;
+  transform: scale(1.07);
+  transition: all 0.3s ease-in-out;
+}
+
+img {
+  filter: opacity(0.5) drop-shadow(0 0 rgb(29, 28, 28));
+  /* glow effect  */
+  -webkit-filter: drop-shadow(0 0 5px #fff);
 }
