--- a/epiqbooks-frontend/src/App.css
+++ b/epiqbooks-frontend/src/App.css
@@ -80,7 +80,7 @@ body {
 #submit-question:hover {
   background: rgb(2 132 199);
 }
-
+/*
 .glass {
   background: hsla(0, 0%, 100%, 0.4);
   -webkit-backdrop-filter: blur(10px);
@@ -98,5 +98,30 @@ body {
 img {
   filter: opacity(0.5) drop-shadow(0 0 rgb(29, 28, 28));
   /* glow effect  */
+/* -webkit-filter: drop-shadow(0 0 5px #fff);
+} */
+.glass {
+  background: hsla(0, 0%, 100%, 0.4);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid hsla(228, 22%, 87%, 0.2);
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 0px 10px hsla(228, 22%, 87%, 0.2);
+}
+
+.glass:hover {
+  background: hsla(0, 0%, 100%, 0.7);
+  transform: scale(1.07);
+  box-shadow: 0px 0px 20px #fff;
+}
+
+img {
+  filter: opacity(0.5) drop-shadow(0 0 rgb(29, 28, 28));
+  /* glow effect  */
   -webkit-filter: drop-shadow(0 0 5px #fff);
+  transition: all 0.3s ease-in-out;
+}
+
+img:hover {
+  filter: opacity(1) drop-shadow(0 0 rgb(29, 28, 28));
 }
